--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading_Future - Next-Gen Indian Trading Terminal</title>
+    <title>TradePilot - Next-Gen Indian Trading Terminal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css?v=3">
@@ -20,8 +20,8 @@
                     style="background: linear-gradient(135deg, var(--accent-cyan), var(--accent-blue));">
                     <i class="fa-solid fa-bolt"></i>
                 </div>
-                <span class="brand-name">TRADING_<span class="accent-text"
-                        style="color: var(--accent-cyan);">FUTURE</span></span>
+                <span class="brand-name">TRADE<span class="accent-text"
+                        style="color: var(--accent-cyan);">PILOT</span></span>
             </div>
 
             <nav class="main-nav">
@@ -224,9 +224,6 @@
                                 <div class="intent-bar">
                                     <button id="btn-intent-buy" class="btn-buy-primary">BUY EQUITY</button>
                                     <button id="btn-intent-sell" class="btn-sell-primary">SELL EQUITY</button>
-                                    <div id="market-locked-msg" class="market-status-locked hidden">
-                                        <i class="fa-solid fa-lock"></i> MARKET CLOSED
-                                    </div>
                                 </div>
 
                                 <!-- NEW: Market Sentiment Section -->
